# template-api

./: .coverage  .dockerignore  .env  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  mypy.ini  pyproject.toml  requirements.txt
.github/workflows/: CI.yml
app/: logging_config.py  main.py  metrics.py  settings.py
template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_contracts_smoke.py  test_metrics.py
