[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.hatch.build.targets.sdist]
include = ["app", "pyproject.toml", "README.md"]

[project]
name = "template-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "pydantic-settings",
    "prometheus-fastapi-instrumentator",
    "python-json-logger"
]

[project.optional-dependencies]
dev = ["pytest", "pytest-cov", "httpx", "ruff", "black", "mypy", "types-requests", "pyyaml", "yamllint"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_ignores = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "app.main"
disable_error_code = ["misc"]
disallow_subclassing_any = false


