[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
lint.select = ["E","F","I","UP","B"]
exclude = ["venv", ".venv", ".tox", "build", "dist"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_unused_configs = true
files = ["app", "src", "tests"]
mypy_path = "."

[tool.pytest.ini_options]
pythonpath = ["."]

# Third-party libs that don't ship complete stubs:
[[tool.mypy.overrides]]
module = ["fastapi.*", "prometheus_fastapi_instrumentator.*", "fastapi.testclient"]
ignore_missing_imports = true

[project]
name = "template-api"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "pydantic>=2",
  "pydantic-settings>=2",
  "prometheus-fastapi-instrumentator>=6",
  "requests>=2",
  "uvicorn>=0.30",
  "httpx==0.23.2"
]

[project.optional-dependencies]
test = ["pytest", "pytest-cov"]